# pl

./: .gitignore  CHANGELOG.md  DailyHaskell.cabal  README.md  myproject.cabal  package.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/fc5a2e73/: cabal_macros.h
.stack-work/install/aarch64-osx/3353aca280a922b1b9f1d760602ee3fa9682f58e556bce65938f7803f6aab976/8.10.7/lib/aarch64-osx-ghc-8.10.7/: libHSMiniRacket-0.1.0.0-ITm9cvaW8c98GdFvxOLu3J-ghc8.10.7.dylib
.stack-work/install/aarch64-osx/3353aca280a922b1b9f1d760602ee3fa9682f58e556bce65938f7803f6aab976/8.10.7/lib/aarch64-osx-ghc-8.10.7/MiniRacket-0.1.0.0-ITm9cvaW8c98GdFvxOLu3J/: Environment.dyn_hi  Error.dyn_hi  Error.hi  Expr.dyn_hi  Lib.dyn_hi  Parser.hi
.stack-work/install/aarch64-osx/3353aca280a922b1b9f1d760602ee3fa9682f58e556bce65938f7803f6aab976/8.10.7/pkgdb/: MiniRacket-0.1.0.0-ITm9cvaW8c98GdFvxOLu3J.conf  package.cache
EncoderProject/: EncoderProject.cabal
EncoderProject/src/: Encoder.hs
EncoderProject/test/: EncoderSpec.hs
MiniRacketProject/: MiniRacket.cabal
MiniRacketProject/src/: Environment.hs  Error.hs  Eval.hs  Expr.hs  MiniRacketParser.hs  Parser.hs
MiniRacketProject/test/: EvalSpec.hs  MiniRacketParserSpec.hs
TypeClassesProject/TypeClassesProject/: TypeClassesProject.cabal
TypeClassesProject/TypeClassesProject/src/: TypeClasses.hs
TypeClassesProject/TypeClassesProject/test/: TypeClassesSpec.hs
src/: DailyFive.hs  DailyFour.hs  DailyOne.hs  DailySeven.hs  DailySix.hs  DailyTwo.hs  TriTree.hs
test/: DailyFiveSpec.hs  DailyFourSpec.hs  DailyOneSpec.hs  DailySevenSpec.hs  DailySixSpec.hs  DailyTwoSpec.hs  Spec.hs  TriTreeSpec.hs
