cabal-version:       >=1.10
name:                DailyHaskell
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     DailyTwo
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010
test-suite DailyTwoSpec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: DailyTwoSpec.hs
  build-depends: base, hspec, DailyHaskell
  default-language: Haskell2010
