cabal-version:       >=1.10
name:                EncoderProject
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Encoder
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite EncoderSpec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             EncoderSpec.hs
  build-depends:
      base,
      hspec,
      EncoderProject
  default-language:    Haskell2010
