cabal-version:       >=1.10
name:                TypeClassesProject
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     TypeClasses
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite TypeClassesSpec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TypeClassesSpec.hs
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       TypeClassesProject
  default-language:    Haskell2010
